<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/dandelion"
        android:layout_width="409dp"
        android:layout_height="278dp"
        android:src="@drawable/dandelion_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/count"
        android:layout_width="303dp"
        android:layout_height="36dp"
        android:fontFamily="monospace"
        android:text="@string/count"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="427dp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:fontFamily="@font/quicksand_italic"
        android:text="@string/accueil"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dandelion"
        app:layout_constraintVertical_bias="0.389" />

    <ImageButton
        android:id="@+id/getstart"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/my_button"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_play_circle_filled_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toEndOf="@id/welcome"
        app:layout_constraintTop_toTopOf="@+id/welcome" />


    <Toolbar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/topbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/end"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:background="@color/transparent"
        android:contentDescription="@string/next"
        android:src="@drawable/ic_message_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/middle"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:background="@color/transparent"
        android:contentDescription="@string/next"
        android:src="@drawable/ic_filter_vintage_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/end"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/end"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:background="@color/transparent"
        android:contentDescription="@string/title_home"
        android:src="@drawable/ic_home_white_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/middle"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/middle"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>